# pvm

./: README.md  prompt.prompty  pyproject.toml  tome.prompty  ume.prompty
docs/adr/: 002-non-intrusive-versioning-strategy.md  003-modular-package-architecture.md  004-layered-template-resolution-system.md  005-missing-file-detection-and-restoration.md  006-separation-of-init-and-track-commands.md  007-lock-file-and-reproducibility.md
prompts/: ssome.prompty  tome.prompty
src/pvm/: __init__.py  config.py  core.py  main.py  templates.py
tests/: conftest.py  test_cli.py  test_core.py  test_lock_features.py  test_templates.py
